[EFL] Unregister viewport,changed signal in EWebLauncher. https://bugs.webkit.org/show_bug.cgi?id=70478

Reviewed by Eric Seidel.

'viewport,changed' signal was registered by EWebLauncher in order to test viewport meta tag.
However, it sets wrong layout to some web sites which have viewport meta tag. Because, host pc
doesn't support proper DPI value though viewport is using DPI value to compute layout values.
This signal is for mobile device.

* EWebLauncher/main.c:
(browserCreate):


Canonical link: https://commits.webkit.org/87100@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@98444 268f45cc-cd09-0410-ab3c-d52691b4dbfc